# trtdlainference-blog

./: CMakeLists.txt  README.md  convertmodel.sh
data/trt/: G2GPU.trt
include/: DLATestCommon.cuh  GPUTestCommon.cuh  filelocs.h  sourceLoc.h  timer.hpp  trtinfer.cuh
src/: trtinfer.cu
tests/: 1xDLAHybridInfer.cu  2xDLAHybridInfer.cu  GPUOnlyInfer.cu  GPUwith1xDLAHybrid.cu  GPUwith2xDLAHybrid.cu  MaxThroughputFPSCount.cu  nsight-record.sh
